# best_game

./: .gitignore  Box2D.h  CMakeLists.txt  Func_on_geometry.cpp  Func_on_geometry.h  Point2D.cpp  Point2D.h  README.md  README.txt  Ray2D.h  Source.cpp  just_test  main.cpp  stdafx.h
best_game/: best_game.pro  geometry.cpp  geometry.h  main.cpp
best_game/testing/: main.cpp  testing.pro
build_MinGW_32bit/: CMakeCache.txt  cmake_install.cmake  template.cbp
src/: Box2D.cpp  Box2D.h  Geom_func.cpp  Geom_func.h  Point2D.cpp  Point2D.h  Ray2D.cpp  Ray2D.h  alien.cpp  alien.h  bullet.cpp  bullet.h  exception.cpp  exception.h  factory.h  gameentity.h  gameobject.cpp  gameobject.h  global_configs.cpp  global_configs.h  gun.cpp  gun.h  logger.h  main.cpp  obstacle.cpp  obstacle.h  player.cpp  player.h  singleton.h  space.cpp  space.h
src/geometry/: CMakeLists.txt
tests/: main.cpp
